<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription">

    <data>
        <variable
            name="galleryItem"
            type="com.example.smiledphoto.ui.gallery.GalleryItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorPrimaryEvenDarker"
        android:listSelector="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photoThumbnailImageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="8dp"
            android:src="@drawable/common_full_open_on_phone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/photoThumbnailImageView"
            app:layout_constraintBottom_toBottomOf="@id/photoThumbnailImageView"
            app:layout_constraintStart_toStartOf="@id/photoThumbnailImageView"
            app:layout_constraintEnd_toEndOf="@id/photoThumbnailImageView"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/photoThumbnailImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/photoThumbnailImageView"
            app:layout_constraintBottom_toBottomOf="@id/photoThumbnailImageView"
            >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@{galleryItem.fileName}"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="2dp"
                app:layout_constraintStart_toEndOf="@id/photoThumbnailImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@{galleryItem.date}"
                android:textSize="17sp"
                android:textColor="@color/colorGrey"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toEndOf="@id/photoThumbnailImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/showTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery_item_show_action"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shareTextView"
            app:layout_constraintTop_toBottomOf="@id/photoThumbnailImageView"
            />

        <TextView
            android:id="@+id/shareTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery_item_share_action"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/showTextView"
            app:layout_constraintEnd_toStartOf="@id/deleteTextView"
            app:layout_constraintTop_toBottomOf="@id/photoThumbnailImageView"
            />

        <TextView
            android:id="@+id/deleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery_item_delete_action"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/shareTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photoThumbnailImageView"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>